--- a/sourcekart/src/main/webapp/WEB-INF/web.xml
+++ b/sourcekart/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 			 version="3.1">
 	<display-name>Archetype Created Web Application</display-name>
 	
-	<!--  <filter>
+	 <filter>
 			<filter-name>springSecurityFilterChain</filter-name>
 			<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -15,30 +15,34 @@
 			<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
-	 -->	
+	 	
 	 
-	 <context-param>
+	 <!-- <context-param>
 				<param-name>contextConfigLocation</param-name>
 				<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
 		</context-param>
-		
+	 -->	
 	 
-		<!-- <context-param>
+		 <context-param>
 				<param-name>contextConfigLocation</param-name>
 				<param-value>/WEB-INF/dispatcher-servlet.xml,/WEB-INF/spring-security.xml</param-value>
 		</context-param>
-		 -->
 		 
 		 
-		<!--  <listener>
+		 
+		  <listener>
 			<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 		</listener> 
-		 -->	
+		
 		 	
 		<servlet>
 			<servlet-name>dispatcher</servlet-name>
 			<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		</servlet>
+		
+		<listener><listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+  </listener>
+  
 		
 		 	
 		<servlet-mapping>
